kubernetes/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
